--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This is all of the code we'll be looking at.
+
+Current as a July 25 2017.
+Dear future: this is NOT a canonical source for any of this code.
